--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                sizes="(max-width: 500px) 120px,
                        400px"
                src="images/firefox-addons120.jpg" 
-               
+               alt="Firefox addons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img src="images/mdn.svg" alt="developer vector image">
