--- a/index.html
+++ b/index.html
@@ -120,31 +120,31 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img srcset="images/firefox_logo120.png 120w,
-                       images/firefox_logo400.png 400w"
+          <img srcset="Images/firefox_logo120.png 120w,
+                       Images/firefox_logo400.png 400w"
                sizes="(max-width: 500px) 120px,
                        400px"
-               src="images/firefox_logo120.png"
+               src="Images/firefox_logo120.png"
                alt="Firefox Logo">
         </a>
         <a href="https://www.mozilla.org/">
-          <img srcset="images/mozilla-dinosaur-head120.png 120w,
-                       images/mozilla-dinosaur-head400.png 400w"
+          <img srcset="Images/mozilla-dinosaur-head120.png 120w,
+                       Images/mozilla-dinosaur-head400.png 400w"
                sizes="(max-width: 500px) 120px,
                        400px" 
-               src="images/mozilla-dinosaur-head120.png" 
+               src="Images/mozilla-dinosaur-head120.png" 
                alt="Mozilla dinosaur head">
         </a>
         <a href="https://addons.mozilla.org/">
-           <img srcset="images/firefox-addons120.jpg 120w,
-                       images/firefox-addons400.jpg 400w"
+           <img srcset="Images/firefox-addons120.jpg 120w,
+                       Images/firefox-addons400.jpg 400w"
                sizes="(max-width: 500px) 120px,
                        400px"
-               src="images/firefox-addons120.jpg" 
+               src="Images/firefox-addons120.jpg" 
                alt="Firefox addons">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img src="images/mdn.svg" alt="developer vector image">
+          <img src="Images/mdn.svg" alt="developer vector image">
         </a>
         <div class="clearfix"></div>
       </div>
@@ -152,9 +152,9 @@
       <div class="red-panda">
         <!-- insert picture element -->
         <picture>
-          <source media="(max-width: 599px)" srcset="images/red-panda600.jpg">
-          <source media="(min-width: 600px" srcset="images/red-panda1200.jpg">
-          <img src="images/red-panda1200.jpg" alt="a red panda">
+          <source media="(max-width: 599px)" srcset="Images/red-panda600.jpg">
+          <source media="(min-width: 600px" srcset="Images/red-panda1200.jpg">
+          <img src="Images/red-panda1200.jpg" alt="a red panda">
         </picture>
       </div>
 
