--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
-      <img src="images/firefox_logo120.png" alt="firefox logo">
+      <img src="Images/firefox_logo120.png" alt="firefox logo">
 
     </header>
 
